# DeepAnalogs 0.2.9

- Added `AnEnDatasetSpatial`
- Added more optimizer options
- Added training with Convolutional LSTM embeddings and naive spatial masks
- Added more members to save from `AnEnDataset` and the derived classes
- Renamed `AnEnOneToMany` to `AnEnDatasetOneToMany`
- Moved from command line options to YAML configuration
- Moved lead time checked from `__get_item__` to initialization in `AnEnDataset` and the derived classes

# DeepAnalogs 0.1.4

- Added `AnEnOneToMany` dataset class
- Removed length check from `get_summary`
- Changed version to major.minor.patch. Major and minor changes will be documented, but not patch updates.

# DeepAnalogs 0.0.0

- Initialized the project
